# python-project-49

./: Makefile  README.md  brain-calc.cast  brain-even.cast  brain-gcd.cast  brain-progression.cast  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
